--- a/openmoteExperiment.ipynb
+++ b/openmoteExperiment.ipynb
@@ -21,54 +21,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The data imported from InfluxDB had unixtime in seconds. This cell turns this time into a human-readable date according to the local time. And exports to a .csv file\n",
+    "# # The data imported from InfluxDB had unixtime in seconds. This cell turns this time into a human-readable date according to the local time. And exports to a .csv file\n",
     "\n",
-    "#Import data from CSV\n",
-    "data = pd.read_csv(\"./dataOpenmote.csv\")\n",
+    "# #Import data from CSV\n",
+    "# data = pd.read_csv(\"./dataOpenmote.csv\")\n",
     " \n",
-    "# Convert unixtime(in seconds) to local time\n",
-    "data['time'] = pd.DatetimeIndex(pd.to_datetime(data['time'], unit='s', utc=True)).tz_convert(\"America/Recife\")\n",
+    "# # Convert unixtime(in seconds) to local time\n",
+    "# data['time'] = pd.DatetimeIndex(pd.to_datetime(data['time'], unit='s', utc=True)).tz_convert(\"America/Recife\")\n",
     "\n",
-    "# During the experiment we had problems with some Rx. This list contains the time periods in which the Rx functioned as it should\n",
-    "intervalList = [\"2020-11-24 11:30:00-03:00\",\n",
-    "                \"2020-11-25 23:15:12-03:00\",\n",
-    "                \"2020-11-26 07:34:12-03:00\",\n",
-    "                \"2020-11-26 22:23:41-03:00\",\n",
-    "                \"2020-11-26 23:16:33-03:00\",\n",
-    "                \"2020-11-29 12:46:09-03:00\",\n",
-    "                \"2020-11-29 17:14:34-03:00\",\n",
-    "                \"2020-11-29 18:00:00-03:00\"]\n",
+    "# # During the experiment we had problems with some Rx. This list contains the time periods in which the Rx functioned as it should\n",
+    "# intervalList = [\"2020-11-24 11:30:00-03:00\",\n",
+    "#                 \"2020-11-25 23:15:12-03:00\",\n",
+    "#                 \"2020-11-26 07:34:12-03:00\",\n",
+    "#                 \"2020-11-26 22:23:41-03:00\",\n",
+    "#                 \"2020-11-26 23:16:33-03:00\",\n",
+    "#                 \"2020-11-29 12:46:09-03:00\",\n",
+    "#                 \"2020-11-29 17:14:34-03:00\",\n",
+    "#                 \"2020-11-29 18:00:00-03:00\"]\n",
     "\n",
-    "openmoteData = pd.concat([data[data[\"time\"] >= intervalList[0]][data[\"time\"] <= intervalList[1]],\n",
-    "                          data[data[\"time\"] >= intervalList[2]][data[\"time\"] <= intervalList[3]],\n",
-    "                          data[data[\"time\"] >= intervalList[4]][data[\"time\"] <= intervalList[5]],\n",
-    "                          data[data[\"time\"] >= intervalList[6]][data[\"time\"] <= intervalList[7]]]).reset_index().drop(columns=[\"name\", \"index\"])\n",
+    "# openmoteData = pd.concat([data[data[\"time\"] >= intervalList[0]][data[\"time\"] <= intervalList[1]],\n",
+    "#                           data[data[\"time\"] >= intervalList[2]][data[\"time\"] <= intervalList[3]],\n",
+    "#                           data[data[\"time\"] >= intervalList[4]][data[\"time\"] <= intervalList[5]],\n",
+    "#                           data[data[\"time\"] >= intervalList[6]][data[\"time\"] <= intervalList[7]]]).reset_index().drop(columns=[\"name\", \"index\"])\n",
+    "# # Separate for each node\n",
+    "# infoNodeA = openmoteData[openmoteData[\"node_id\"] == 'a']\n",
+    "# infoNodeB = openmoteData[openmoteData[\"node_id\"] == 'b']\n",
+    "# infoNodeC = openmoteData[openmoteData[\"node_id\"] == 'c']\n",
+    "# infoNodeD = openmoteData[openmoteData[\"node_id\"] == 'd']\n",
+    "# infoNodeE = openmoteData[openmoteData[\"node_id\"] == 'e']\n",
+    "# infoNodeF = openmoteData[openmoteData[\"node_id\"] == 'f']\n",
+    "# infoNodeG = openmoteData[openmoteData[\"node_id\"] == 'g']\n",
+    "# infoNodeH = openmoteData[openmoteData[\"node_id\"] == 'h']\n",
+    "# infoNodeI = openmoteData[openmoteData[\"node_id\"] == 'i']\n",
+    "# infoNodeJ = openmoteData[openmoteData[\"node_id\"] == 'j']\n",
+    "# infoNodeK = openmoteData[openmoteData[\"node_id\"] == 'k']\n",
     "\n",
-    "infoNodeA = openmoteData[openmoteData[\"node_id\"] == 'a']\n",
-    "infoNodeB = openmoteData[openmoteData[\"node_id\"] == 'b']\n",
-    "infoNodeC = openmoteData[openmoteData[\"node_id\"] == 'c']\n",
-    "infoNodeD = openmoteData[openmoteData[\"node_id\"] == 'd']\n",
-    "infoNodeE = openmoteData[openmoteData[\"node_id\"] == 'e']\n",
-    "infoNodeF = openmoteData[openmoteData[\"node_id\"] == 'f']\n",
-    "infoNodeG = openmoteData[openmoteData[\"node_id\"] == 'g']\n",
-    "infoNodeH = openmoteData[openmoteData[\"node_id\"] == 'h']\n",
-    "infoNodeI = openmoteData[openmoteData[\"node_id\"] == 'i']\n",
-    "infoNodeJ = openmoteData[openmoteData[\"node_id\"] == 'j']\n",
-    "infoNodeK = openmoteData[openmoteData[\"node_id\"] == 'k']\n",
-    "\n",
-    "# Export openmoteData to csv with datetime\n",
-    "openmoteData.to_csv(\"./data/openmoteData.csv\", index=False)\n",
-    "infoNodeA.to_csv(\"./data/infoNodeA.csv\", index=False)\n",
-    "infoNodeB.to_csv(\"./data/infoNodeB.csv\", index=False)\n",
-    "infoNodeC.to_csv(\"./data/infoNodeC.csv\", index=False)\n",
-    "infoNodeD.to_csv(\"./data/infoNodeD.csv\", index=False)\n",
-    "infoNodeE.to_csv(\"./data/infoNodeE.csv\", index=False)\n",
-    "infoNodeF.to_csv(\"./data/infoNodeF.csv\", index=False)\n",
-    "infoNodeG.to_csv(\"./data/infoNodeG.csv\", index=False)\n",
-    "infoNodeH.to_csv(\"./data/infoNodeH.csv\", index=False)\n",
-    "infoNodeI.to_csv(\"./data/infoNodeI.csv\", index=False)\n",
-    "infoNodeJ.to_csv(\"./data/infoNodeJ.csv\", index=False)\n",
-    "infoNodeK.to_csv(\"./data/infoNodeK.csv\", index=False)"
+    "# # Export openmoteData to csv with datetime\n",
+    "# openmoteData.to_csv(\"./data/openmoteData.csv\", index=False)\n",
+    "# infoNodeA.to_csv(\"./data/infoNodeA.csv\", index=False)\n",
+    "# infoNodeB.to_csv(\"./data/infoNodeB.csv\", index=False)\n",
+    "# infoNodeC.to_csv(\"./data/infoNodeC.csv\", index=False)\n",
+    "# infoNodeD.to_csv(\"./data/infoNodeD.csv\", index=False)\n",
+    "# infoNodeE.to_csv(\"./data/infoNodeE.csv\", index=False)\n",
+    "# infoNodeF.to_csv(\"./data/infoNodeF.csv\", index=False)\n",
+    "# infoNodeG.to_csv(\"./data/infoNodeG.csv\", index=False)\n",
+    "# infoNodeH.to_csv(\"./data/infoNodeH.csv\", index=False)\n",
+    "# infoNodeI.to_csv(\"./data/infoNodeI.csv\", index=False)\n",
+    "# infoNodeJ.to_csv(\"./data/infoNodeJ.csv\", index=False)\n",
+    "# infoNodeK.to_csv(\"./data/infoNodeK.csv\", index=False)"
    ]
   },
   {
@@ -878,16 +878,6 @@
     "    plt.clf()\n",
     "    \n",
     "    print(\"****************************************\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n"
    ]
   },
   {
